# qterm

./: .gitignore  AGENT.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md  ROADMAP.md
.cache/clangd/index/: DECdrawing.inc.46C53E0C5C01C06E.idx  encoding.c.B0ECE47483100245.idx  fullwidth.inc.E6B1AF24E3D1A6A0.idx  keyboard.c.3042722B1C5B95E2.idx  main.cpp.B5E2DB62D86717D1.idx  mouse.c.A21D325E28DC4D80.idx  parser.c.DA398171D1D7F756.idx  pen.c.2BB29D65945EAB12.idx  qtermcell.h.13CC90B9B6BFC55D.idx  qtermlibvtermparser.cpp.909F077D8759149B.idx  qtermlibvtermparser.h.8748711EAE23733E.idx  qtermlocalbackend.cpp.5156E9F3C48DC5D3.idx  qtermlocalbackend.cpp.8A21B9A7A11B238F.idx  qtermlocalbackend.h.0A376056B9F383A3.idx  qtermlocalbackend.h.749D4410F8B6A781.idx  qtermparser.cpp.9DC8AA6253763F11.idx  qtermparser.h.B4C16A971D2116C3.idx  qtermplaintextsurfaceadapter.cpp.36A940C21912A063.idx  qtermplaintextsurfaceadapter.h.DEF8EF84B12EABD3.idx  qtermquickitem.cpp.4901815F46DF9C16.idx  qtermquickitem.h.3EC134C7E0CE6B59.idx  qtermquickitem.h.DE057C71A0755421.idx  qtermsession.cpp.159170129C9407B0.idx  qtermsession.h.29B97A81184521C6.idx  qtermsession.h.B5C63FF0C494F627.idx  qtermsessionbackend.cpp.08D21CDB584C98D4.idx  qtermsessionbackend.cpp.DF68A8F8A6855CA3.idx  qtermsessionbackend.h.06757A2EF35DF1E0.idx  qtermsessionbackend.h.D84982303FE73170.idx  qtermsurfacemodel.cpp.A8831E5B3F499550.idx  qtermsurfacemodel.h.9909B1E24480EDC6.idx  qtermtextparser.cpp.09AD8C579CC49DC5.idx  qtermtextparser.h.9A7C6448006C1D05.idx  qtermvtermprocessor.cpp.09CE3B610662A89F.idx  qtermvtermprocessor.h.92C98340EBB136A6.idx  rect.h.69D98C8647D4E330.idx  screen.c.B73E014595726B92.idx  state.c.7BCD5C6B293CF48C.idx  uk.inc.562F53A341072CE2.idx  unicode.c.A960E2869357A451.idx  (+5 more)
.cmake-vscode-probe/: CMakeCache.txt
docs/: BUGS.md  MANUAL_TESTING.md  MULTIPLE_RENDERING_BACKEND.md  PROTOCOL_STATUS.md  TERMINAL_PROTOCAL.md  THEME-DESIGN.md
docs/architecture/: core.md  frontend.md  overview.md  session.md  surface.md
docs/getting-started/: cmake-integration.md  first-terminal-widget.md  first-terminal.md  overview.md
docs/guides/: input-keymap.md  scrollback.md  selection-clipboard.md  session-backends.md  theming.md
docs/internals/bugs/: TERMINAL_RESIZE_REFLOW_BUG.md
docs/internals/testing/: manual-testing-tmux.md  manual-testing.md  testing.md
examples/quick-demo/: .qmlls.ini  CMakeLists.txt  Main.qml  NewSessionDialog.qml  PtySessionForm.qml  SerialSessionForm.qml  TabManager.qml  TelnetSessionForm.qml  TermMenuBar.qml  TermStatusBar.qml  TerminalPane.qml  TerminalTab.qml  main.cpp
examples/quick-demo/qml/: Main.qml
examples/widget-demo/: CMakeLists.txt  main.cpp
include/QTerm/: QTermLocalPtyBackend.h  QTermModeState.h  QTermQuickItem.h  QTermQuickPaintedItem.h  QTermSerialBackend.h  QTermSerialPortInfo.h  QTermSerialPortScanner.h  QTermSession.h  QTermSessionBackend.h  QTermSurfaceModel.h  QTermTelnetBackend.h  QTermTerminal.h  QTermTheme.h  QTermThemeLoader.h  QTermThemePack.h  QTermWidget.h  qtermcell.h  qtermlibvtermparser.h  qtermlocalbackend.h  qtermparser.h  qtermplaintextsurfaceadapter.h  qtermquickitem.h  qtermsession.h  qtermsessionbackend.h  qtermsurfacemodel.h  qtermtextparser.h
src/: CMakeLists.txt  QTermRenderUtils.h  QTermTheme.cpp  QTermThemeLoader.cpp  QTermThemePack.cpp
src/backend/: qtermlocalbackend.cpp  qtermlocalbackend.h  qtermsessionbackend.cpp  qtermsessionbackend.h
src/core/: CMakeLists.txt  QTermBuffer.cpp  QTermBuffer.h  QTermCell.h  QTermCore.cpp  QTermCore.h  QTermCursorState.h  QTermInputEncoder.cpp  QTermInputEncoder.h  QTermInputExecutor.cpp  QTermInputExecutor.h  QTermLine.cpp  QTermLine.h  QTermModeState.h  QTermSavedCursorState.h  QTermScreenState.h  QTermSelectionModel.cpp  QTermSelectionModel.h  QTermSurfaceModel.cpp  QTermTerminal.cpp  QTermTextParser.cpp  QTermTextParser.h  qtermlibvtermparser.cpp  qtermparser.cpp  qtermplaintextsurfaceadapter.cpp  qtermsurfacemodel.cpp  qtermtextparser.cpp
src/platform/: CMakeLists.txt
src/quick/: CMakeLists.txt  QTermMacOSUtils.mm  QTermQmlForeignTypes.cpp  QTermQuickItem.cpp  QTermQuickPaintedItem.cpp  QTermViewController.cpp  QTermViewController.h  qtermquickitem.cpp  qtermquickitem.h
src/session/: CMakeLists.txt  QTermSession.cpp  QTermSessionBackend.cpp  qtermsession.cpp  qtermsession.h  qtermsessionbackend.cpp
src/session/local/: CMakeLists.txt  QTermLocalPtyBackend.cpp  qtermlocalbackend.cpp
src/session/remote/: CMakeLists.txt
src/session/serial/: QTermSerialBackend.cpp  QTermSerialPortInfo.cpp  QTermSerialPortScanner.cpp
src/session/telnet/: QTermTelnetBackend.cpp
src/vterm/: qtermvtermprocessor.cpp  qtermvtermprocessor.h
src/widget/: QTermWidget.cpp
tests/: CMakeLists.txt
tests/core/: QTermCoreTest.cpp
tests/quick/: QTermQuickItemTest.cpp  QTermQuickPaintedItemTest.cpp  QTermResizeVisualTest.cpp
tests/session/: QTermLocalPtyBackendTest.cpp  QTermSessionTest.cpp
